--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <section class="container">
     <article class="header">
-      <img src="assets/images/avatar-jessica.jpeg" alt="foto de perfil" class="profile-image">
+      <img src="assets/images/avatar.jpg" alt="foto de perfil" class="profile-image">
       <h1>Erysnell Gonzalez</h1>
-      <p>Habana, Cuba</p>
+      <p class="location">Habana, Cuba</p>
       <p> "Front-end developer and avid reader."</p>
     </article>
 
