adding the functionality of the links to redirect to their respective pages

--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
 
   </head>
   <body>
+<main class="container">
+  <div class="card-container">
 
-  <section class="container">
-    <article class="header">
-      <img src="assets/images/avatar.jpg" alt="foto de perfil" class="profile-image">
+      <img src="assets/images/avatar.jpg" alt="profile photo" class="profile-image">
       <h1>Erysnell Gonzalez</h1>
-      <p class="location">Habana, Cuba</p>
-      <p> "Front-end developer and avid reader."</p>
-    </article>
+      <p class="location">Havana, Cuba</p>
+      <p class="text"> "Front-end developer and avid reader."</p>
 
     <article class="nav">
-      <a class="nav-item" >GitHub</a>
-      <a class="nav-item" >Frontend Mentor</a>
-      <a class="nav-item" >LinkedIn</a>
-      <a class="nav-item" >Twitter</a>
-      <a class="nav-item" >Instagram</a>
+      <a class="nav-item" href="https://github.com/Erysnell" >GitHub</a>
+      <a class="nav-item" href="https://www.frontendmentor.io/profile/Erysnell">Frontend Mentor</a>
+      <a class="nav-item" href="https://www.linkedin.com/in/erysnell-gonzález-346692328">LinkedIn</a>
+      <a class="nav-item" href="https://x.com/ErySouls?t=eRLuVQXN4RR5tyJdoYsUHg&s=09">Twitter</a>
+      <a class="nav-item" href="https://www.instagram.com/invites/contact/?i=sfnkzxto81ap&utm_content=5cajdze">Instagram</a>
     </article>
-  </section>
-
+  </div>
+</main>
   </body>
   </html>
